--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -42,13 +42,13 @@
     <% }%>
 
 <div class="form-group  input-dash wow slideInUp">
-    <input class="form-control" type="text" id="password" name="password" placeholder="Current Password" data-rule-minlength="5" data-rule-maxlength="75" data-rule-required="true"  data-msg-required="Please enter current password.">
+    <input class="form-control" type="password" id="password" name="password" placeholder="Current Password" data-rule-minlength="5" data-rule-maxlength="75" data-rule-required="true"  data-msg-required="Please enter current password.">
  </div>
  <div class="form-group  input-dash wow slideInUp">
-    <input class="form-control" type="text" id="new_password" name="new_password" placeholder="New Password"  data-rule-minlength="5" data-rule-maxlength="75" data-rule-required="true"  data-msg-required="Please enter new password.">
+    <input class="form-control" type="password" id="new_password" name="new_password" placeholder="New Password"  data-rule-minlength="5" data-rule-maxlength="75" data-rule-required="true"  data-msg-required="Please enter new password.">
  </div>
  <div class="form-group  input-dash wow slideInUp">
-    <input class="form-control" type="text" id="confrm_password" name="confrm_password"  data-rule-equalto="#new_password" placeholder="confirm password" data-rule-minlength="5" data-rule-maxlength="75" data-rule-required="true"  data-msg-required="Please enter confirm new password." data-msg-equalto="Please enter the same value again.">
+    <input class="form-control" type="password" id="confrm_password" name="confrm_password"  data-rule-equalto="#new_password" placeholder="confirm password" data-rule-minlength="5" data-rule-maxlength="75" data-rule-required="true"  data-msg-required="Please enter confirm new password." data-msg-equalto="Please enter the same value again.">
  </div>
                             <div class="gaps"></div>
                             <div class="d-flex justify-content-between align-items-center">
