--- a/views/wallet-success.ejs
+++ b/views/wallet-success.ejs
@@ -13,9 +13,9 @@
                             <h4 class="green-heading">Here is your wallet address.</h4>
 
                           <div class="input-group input-dash copy-id-dash">
-                            <input class="form-control" type="text" placeholder="" value="<%= wallet_address %>" readonly>
-                             <!-- <input class="form-control" type="text" placeholder="" value="2798ehgdgdsffsfsfighj9832q787ysuueh"> -->
-                             <a href=""><i class="fa fa-copy"></i></a>
+                            <input class="form-control" type="text" placeholder="" value="<%= wallet_address %>" name="wallet_address" id="wallet_address" readonly>
+                            
+                            <a onclick="myFunction()" href="javascript:void(0);"><i class="fa fa-copy"></i></a>
                              
                         </div>
 
@@ -40,3 +40,32 @@
 
 
 <%- include('footer') %>
+<script src="/assets/js/jquery.validate.min.js"></script>
+<script type="text/javascript">
+$('#create_wallet').validate({
+      onfocusout: function(element) {
+      this.element(element);
+      },
+      errorClass: 'error_validate',
+      errorElement:'span',
+      highlight: function(element, errorClass) {
+      $(element).removeClass(errorClass);
+      },
+      submitHandler:function(form)
+         {
+                 $('#submit_wallet').attr('disabled',true);
+                 form.submit();
+         }
+      });
+</script> 
+<script type="text/javascript">
+  function myFunction() {
+    var copyText = document.getElementById("wallet_address");
+    if($('#wallet_address').val() !="")
+    {
+    copyText.select();
+    document.execCommand("copy");
+    alert("wallet_address is copied.");
+    }  
+  }  
+  </script>
