--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -31,7 +31,7 @@
                     </h4>
                     <img src="assets/images/buy-coin.png" class="img-fluid icon-img">
 
-                    <h2 class="mb-5"><%=coinbalance%> $EBT</h2>
+                    <h2 class="mb-5"><%=coinbalance%></h2>
                   </div>
                 </div>
               </div>
@@ -42,7 +42,7 @@
                     <h4 class="font-weight-normal mb-3">Rewards Earned  
                     </h4>
                     <img src="assets/images/buy-coin.png" class="img-fluid icon-img">
-                    <h2 class="mb-5">$EBT </h2>
+                    <h2 class="mb-5">$EBT  </h2>
                   </div>
                 </div>
               </div>
@@ -50,10 +50,10 @@
                 <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
                     <img src="assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
-                    <h4 class="font-weight-normal mb-3">USDT (TRC20) 
+                    <h4 class="font-weight-normal mb-3">USDT (ERC20) 
                     </h4>
                     <img src="assets/images/tether.png" class="img-fluid icon-img">
-                    <h2 class="mb-5"></h2>
+                    <h2 class="mb-5"> <%=coinbalance%></h2>
                   </div>
                 </div>
               </div>
@@ -123,7 +123,7 @@
                                 <span class="cr"><i class="cr-icon fa fa-check"></i></span>
                                 <div>
                                   <img src="assets/images/tether.png">
-                                  USDT<small>(TRC20)</small>
+                                  USDT<small>(ERC20)</small>
                                 </div>
                               </label>
                             </div>
