--- a/views/admin/front-admin/admin-transaction-table.ejs
+++ b/views/admin/front-admin/admin-transaction-table.ejs
@@ -56,12 +56,12 @@
                    </div>
                    </div>
         <div class="card-body table-responsive">
-          <table class="table">
-            <thead>
+           <table class="table"> 
+               <thead>
                 <tr>
                   <th width="5%" class="border-top-0">S.No</th>
                   <th width="13%" class="border-top-0">Date</th>
-                  <th width="15%" class="border-top-0">Transaction Id</th>
+                  <th width="15%" class="border-top-0">Transaction name</th>
                   <th width="15%" class="border-top-0">Sender Address</th>
                   <th width="15%" class="border-top-0">Receiver Address</th>
                   <th width="10%" class="border-top-0">Status</th>
@@ -71,10 +71,11 @@
                   </tr>
             </thead>
              <tbody>
+              <% for(var i=1; i <= userTransaction.length; i++) { %>
                               <tr>
-                                <td width="5%">1</td>
-                                <td width="12%">27,Apr 2021, 6:45:54</td>
-                                <td width="15%"><a href="">3787388686278958743787559975353533535</a></td>
+                                <td width="5%"><%=i %></td>
+                                <td width="12%"><%= userTransaction[i-1].date%></td>
+                                <td width="15%"><a href=""><%= userTransaction[i-1].username%></a></td>
                                 <td width="15%"><a href="">3787388686278958743787559975353533535</a></td>
                                 <td width="15%"><a href="">3787388686278958743787559975353533535</a> </td>
                                 <td width="10%"><span class="green-text">Received</span></td>
@@ -109,7 +110,10 @@
 
                               
                             </tbody>
-          </table>
+          </table> 
+
+          
+
         </div>
       </div>
     </div>
