private key live stream update

--- a/views/dash-private-key.ejs
+++ b/views/dash-private-key.ejs
@@ -19,7 +19,7 @@
                           
                            <p class="head-commn-text">This will create a new wallet.</p>
 
-                            <h4 class="green-heading">Here is your passphrase. You must copy it <br> and save it  a secure place.</h4>
+                            <h4 class="green-heading">Here is your Private Key. You must copy it <br> and save it  a secure place.</h4>
                            
                             <div class="input-group input-dash copy-id-dash">
                               <input class="form-control"  type="text"  value="<%= passphrase%>" name="passphrase" id="passphrase"  data-rule-required="true"  data-msg-required="Please enter Passphrase." readonly>
@@ -29,7 +29,7 @@
                              </div> -->
                            </div>
                         <div class="clearfix">
-                            <span class=""><b><i class="fa fa-info-circle"></i> Make sure you keep the passphrase safe. You will be asked to re-type it for cofirmation.</b></span>
+                            <span class=""><b><i class="fa fa-info-circle"></i> Make sure you keep the Private Key safe. You will be asked to re-type it for cofirmation.</b></span>
                           </div>
                         <div class="checkbox">
                           <label>
