--- a/views/verify-private-key.ejs
+++ b/views/verify-private-key.ejs
@@ -19,7 +19,7 @@
                           
                            <p class="head-commn-text">This will create a new wallet.</p>
 
-                            <h4 class="green-heading">Please enter your passphrase below to <br> Confirm your wallet.</h4>
+                            <h4 class="green-heading">Please enter your Private Key below to <br> Confirm your wallet.</h4>
 
                           
                             <div class="input-group input-dash copy-id-dash enter-passphrase">
@@ -33,7 +33,7 @@
                                 <!-- <span class="float-right wow slideInRight"><a href="/Create-wallet">Create a new wallet</a></span> -->
                               </div>
                           <div class="clearfix note-line">
-                            <span class=""><b><i class="fa fa-info-circle"></i> Make sure you keep the passphrase safe. If you loose your passphrase, your account can't be restored and all your funds will be last.</b></span>
+                            <span class=""><b><i class="fa fa-info-circle"></i> Make sure you keep the Private Key safe. If you loose your passphrase, your account can't be restored and all your funds will be last.</b></span>
                           </div>
 
                           <div class="text-center">
