--- a/views/index.ejs
+++ b/views/index.ejs
@@ -497,7 +497,7 @@
             <div class="col-md-6 ml-auto">
                  <h4 class="common-big-heading text-center mb-5">Live Video Streaming</h4>
                  <div class="bg-ifram">
-                  <iframe width="100%" height="290" src="https://www.youtube.com/embed/Vrs1j3qZ8w0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="290" src="https://www.youtube.com/embed/NwfeXdimOus" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                </div>
             </div>
         </div>
