--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -54,7 +54,7 @@
                                    <input class="form-control" type="email" name="email" value="<%=result.email%>" placeholder="<%=result.email%>">
                                 </div>
                               </div>
-<!--                              
+                             
                             </div>
                             <div class="row">
                                <div class="col-md-6">
@@ -62,16 +62,13 @@
                                   <label>Mobile Number</label>
                                    <input class="form-control" name="mob" value="<%=result.mobile_no%>" type="text" placeholder="<%=result.mobile_no%>">
                                 </div>
-                              </div> -->
-                              <!-- <div class="col-md-6">
+                              </div> 
+                              <div class="col-md-6">
                                 <div class="form-group text-left">
                                   <label>Country</label>
-                                   <select class="form-control">
-                                     <option>India</option>
-                                   </select>
-                                   
+                                  <input class="form-control" name="Country" value="<%=result.country%>" type="text" placeholder="<%=result.country%>">
                                 </div>
-                              </div> -->
+                              </div>
                              
 
                             </div>
