--- a/assets/css/custom-art-ico.css
+++ b/assets/css/custom-art-ico.css
@@ -142,6 +142,7 @@ flex-wrap: wrap;
     padding: 0 15px;
     border-radius: 5px;
     height: 38px !important;
+    color: #fff !important;
 }
 
 .profile-input-form.create-wallet-block .form-group .input-group .nice-select {
