--- a/public/assets/css/custom-login.css
+++ b/public/assets/css/custom-login.css
@@ -2,7 +2,7 @@ html {
     scroll-behavior: smooth;
   }
   body{
-      font-family: 'Inter', sans-serif;
+      font-family: 'Quicksand', sans-serif;
   }
   .header-main {
       transition: 0.5s;
@@ -487,6 +487,18 @@ html {
   .login-form-box .form-control::placeholder{
       color: #fff;
   }
+  
+  .login-form-box .input-group .input-group-prepend .form-control{
+  min-width: 80px;
+  }
+  .login-form-box select.form-control{
+    color: #ddd !important;
+    }
+  
+  .login-form-box .input-group > .form-control{
+      padding-left: 20px;
+  }
+  
   .login-form-box p a {
       color: #000;
       text-decoration: underline;
