--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -50,7 +50,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-5">
                 <div class="login-form-box">
                     <h2>Signup</h2>
                     <% if(err_msg!=undefined){ %>
@@ -81,6 +81,39 @@
                               <input name="email" type="email" class="form-control" placeholder="yourmail@gmail.com">
                             </div>
                           </div>
+                          </div>
+                          <div class="row">
+                            <div class="col-md-12">
+                              <div class="form-group">
+                                <label>Select Country</label>
+                                <select class="form-control">
+                                  <option>India</option>
+                                  <option>1</option>
+                                  <option>1</option>
+                                </select>
+                              </div>
+                            </div>
+                          </div>
+    
+                          <div class="row">
+                            <div class="col-md-12">
+                              <div class="form-group">
+                                <label>Mobile Number</label>
+                                <div class="input-group mb-3">
+                                  <div class="input-group-prepend">
+                                        <select class="form-control">
+                                          <option>+91</option>
+                                          <option>1</option>
+                                          <option>1</option>
+                                        </select>
+                                  </div>
+                                  <input type="text" class="form-control" placeholder="Mobile Number">
+                                </div>
+    
+                              
+                              </div>
+                            </div>
+                          </div>
                           <div class="row">
                             <div class="col-md-6">
                               <div class="form-group">
@@ -95,6 +128,9 @@
                                 </div>
                             </div>
                           </div>
+
+
+                          <div class="row">
     
                         <div class="col-md-6">
                        <div class="form-group">
@@ -104,6 +140,8 @@
                           placeholder="Enter Referral Code">
                       </div>
                       </div>
+
+                    </div>
                       
                      
                       
