--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -142,7 +142,7 @@
                               <!-- <a href="/send-EBT" class="btn btn-common light-green">Send</a> -->
                               <!-- <a href="/send-EBT" class="btn btn-common light-green" >Send</a> -->
                               <a href="/buy-coin" class="btn btn-common light-green">Buy</a>
-                              <a href="/receive-artw?walletid=<%-wallet_details._id %>" class="btn btn-common light-green">Receive</a>
+                              <a href="/receive-ebt?walletid=<%-wallet_details._id %>" class="btn btn-common light-green">Receive</a>
                           </div>
                     </div>
                   </div>
