--- a/views/index.ejs
+++ b/views/index.ejs
@@ -494,7 +494,7 @@
 <section class="video-stream-sec  page-section" id="live-stream">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 ml-auto">
+            <div class="col-md-6 m-auto">
                  <h4 class="common-big-heading text-center mb-5">Live Video Streaming</h4>
                  <div class="bg-ifram">
                     <iframe width="100%" height="290" src="https://www.youtube.com/embed/NwfeXdimOus" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
