--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -56,7 +56,7 @@
                               </div>
                              
                             </div>
-                            <div class="row">
+                            <!-- <div class="row">
                                <div class="col-md-6">
                                 <div class="form-group text-left">
                                   <label>Mobile Number</label>
@@ -71,7 +71,7 @@
                               </div>
                              
 
-                            </div>
+                            </div> -->
                             <div class="text-left mlti-btn mt-3">
                             <button type="submit" class="btn btn-common light-green ml-0">Save</button>
                              <% if(session.wallet){ %>
