--- a/views/referral-table.ejs
+++ b/views/referral-table.ejs
@@ -61,7 +61,7 @@
         <div class="text-right create-wallet-block">
         
           <div class="input-group input-dash copy-id-dash m-0">
-            <input class="form-control" type="text" id="addresslink" name="addresslink" value="https://theartwcoin.com/signup?code=<%=ref_code%>" readonly>
+            <input class="form-control" type="text" id="addresslink" name="addresslink" value="https://ebtico.com/signup?code=<%=ref_code%>" readonly>
               <a onclick="myFunction2()" href="javascript:void(0);"><i class="fa fa-copy"></i></a>
               <a href="javascript:void(0);" data-toggle="modal" data-target=".share-modal"><i class="mdi mdi-share-variant"></i></a>
          </div>
@@ -75,8 +75,8 @@
   </div>
 <!-- 
   <div id="fb-root"></div>
-  <div class="fb-share-button" data-href="https://theartwcoin.com/signup?code=4sa5v4XB2A" data-layout="button_count" data-size="small">
-    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://theartwcoin.com/signup?code=4sa5v4XB2A&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div> -->
+  <div class="fb-share-button" data-href="https://ebtico.com/signup?code=4sa5v4XB2A" data-layout="button_count" data-size="small">
+    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://ebtico.com/signup?code=4sa5v4XB2A&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div> -->
 
     <!-- <a href="javascript:;" class="sslinks twitter"  data-toggle="modal" data-target=".share-modal">
       Share
@@ -96,39 +96,39 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col-md-3 col-6 mb-3">
-                  <a href="https://www.facebook.com/sharer/sharer.php?u=https://theartwcoin.com/signup?code=<%=ref_code%>" title="Facebook" target="_blank" class="social-share text-muted d-block text-center h6">
+                  <a href="https://www.facebook.com/sharer/sharer.php?u=https://ebtico.com/signup?code=<%=ref_code%>" title="Facebook" target="_blank" class="social-share text-muted d-block text-center h6">
                     <i class="fab fa-facebook-square facebook-btn"></i>
                     <span class="btn-block mt-3">Facebook</span>
                   </a>
                 </div>
                 <div class="col-md-3 col-6 mb-3">
-                  <a href="https://twitter.com/intent/tweet?url=https://theartwcoin.com/signup?code=<%=ref_code%>" data-url="https://theartwcoin.com/signup?code=<%=ref_code%>" class="social-share text-muted d-block text-center h6" target="_blank" title="Twitter">
+                  <a href="https://twitter.com/intent/tweet?url=https://ebtico.com/signup?code=<%=ref_code%>" data-url="https://ebtico.com/signup?code=<%=ref_code%>" class="social-share text-muted d-block text-center h6" target="_blank" title="Twitter">
                     <i class="fab fa-twitter twitter-btn"></i> <span class="btn-block mt-3">Twitter</span>
                   </a>
                 </div>
                 <!-- <div class="col-md-3 col-6 mb-3">
-                  <a href="fb-messenger://share/?link=https://theartwcoin.com/signup?code=<%=ref_code%>&amp;app_id=APP_ID" class="social-share text-muted d-block text-center h6" title="Facebook Messenger">
+                  <a href="fb-messenger://share/?link=https://ebtico.com/signup?code=<%=ref_code%>&amp;app_id=APP_ID" class="social-share text-muted d-block text-center h6" title="Facebook Messenger">
                   <i class="fab fa-facebook-messenger fb-messenger"></i> <span class="btn-block mt-3">Messenger</span>
                 </a>
               </div> -->
                 <!-- <div class="col-md-3 col-6 mb-3">
-                  <a href="whatsapp://send?text=https://theartwcoin.com/signup?code=<%=ref_code%>" data-action="share/whatsapp/share" class="social-share text-muted d-block text-center h6" title="WhatsApp">
+                  <a href="whatsapp://send?text=https://ebtico.com/signup?code=<%=ref_code%>" data-action="share/whatsapp/share" class="social-share text-muted d-block text-center h6" title="WhatsApp">
                     <i class="fab fa-whatsapp btn-whatsapp"></i> <span class="btn-block mt-3">WhatsApp</span>
                   </a>
                 </div> -->
                 <div class="col-md-3 col-6 mb-3">
-                  <a href="https://telegram.me/share/url?url=https://theartwcoin.com/signup?code=<%=ref_code%>&amp;text=Easiest way to buy/sell 100s of NFTs and Artwork. Signup on theartwcoin.com to get $10 worth FREE $EBT as signup bonus and extra referral bonus of $5 worth FREE $EBT when you put in my referral code.   Direct Link -- https://theartwcoin.com/signup?code=<%=ref_code%>   Code - <%=ref_code%>" target="_blank" class="social-share text-muted d-block text-center h6" title="Telegram">
+                  <a href="https://telegram.me/share/url?url=https://ebtico.com/signup?code=<%=ref_code%>&amp;text=Easiest way to buy/sell 100s of NFTs and Artwork. Signup on ebtico.com to get $10 worth FREE $EBT as signup bonus and extra referral bonus of $5 worth FREE $EBT when you put in my referral code.   Direct Link -- https://ebtico.com/signup?code=<%=ref_code%>   Code - <%=ref_code%>" target="_blank" class="social-share text-muted d-block text-center h6" title="Telegram">
                     <i class="fab fa-telegram-plane btn-telegram"></i> <span class="btn-block mt-3">Telegram</span></a>
                   </div>
                 <div class="col-md-3 col-6 mb-3">
-                  <a href="mailto:?subject=ARTW Referral&amp;body=Easiest way to buy/sell 100s of NFTs and Artwork. Signup on theartwcoin.com to get $10 worth FREE $EBT as signup bonus and extra referral bonus of $5 worth FREE ARTW when you put in my referral code.<br><br>\n\n
-                  Direct Link -- https://theartwcoin.com/signup?code=<%=ref_code%><br><br>\n\n
+                  <a href="mailto:?subject=ARTW Referral&amp;body=Easiest way to buy/sell 100s of NFTs and Artwork. Signup on ebtico.com to get $10 worth FREE $EBT as signup bonus and extra referral bonus of $5 worth FREE ARTW when you put in my referral code.<br><br>\n\n
+                  Direct Link -- https://ebtico.com/signup?code=<%=ref_code%><br><br>\n\n
                   Code - <%=ref_code%>" class="social-share text-muted d-block text-center h6" title="Email">
                     <i class="far fa-envelope"></i> <span class="btn-block mt-3">Email</span>
                   </a>
                 </div>
                 <!-- <div class="col-md-3 col-6 mb-3">
-                  <a href="sms://?body=Check this https://theartwcoin.com/signup?code=<%=ref_code%>" class="social-share text-muted d-block text-center h6" title="Text message">
+                  <a href="sms://?body=Check this https://ebtico.com/signup?code=<%=ref_code%>" class="social-share text-muted d-block text-center h6" title="Text message">
                     <i class="fa fa-sms"></i> <span class="btn-block mt-3">Text message</span>
                   </a>
                 </div> -->
@@ -146,11 +146,11 @@
               <div class="text-right create-wallet-block">
         
                 <div class="input-group input-dash copy-id-dash m-0">
-                  <input style="max-width: 418px;" type="text" readonly="readonly" id="url_campaign" class="form-control w-100 bg-white" value="Easiest way to buy/sell 100s of NFTs and Artwork. Signup on theartwcoin.com to get $10 worth FREE ARTW as signup bonus and extra referral bonus of $5 worth FREE ARTW when you put in my referral code.   Direct Link -- https://theartwcoin.com/signup?code=<%=ref_code%>   Code - <%=ref_code%> ">
+                  <input style="max-width: 418px;" type="text" readonly="readonly" id="url_campaign" class="form-control w-100 bg-white" value="Easiest way to buy/sell 100s of NFTs and Artwork. Signup on ebtico.com to get $10 worth FREE ARTW as signup bonus and extra referral bonus of $5 worth FREE ARTW when you put in my referral code.   Direct Link -- https://ebtico.com/signup?code=<%=ref_code%>   Code - <%=ref_code%> ">
                   <a onclick="myFunction3()" href="javascript:void(0);"><i class="fa fa-copy"></i></a>
                </div>
               </div>
-                  <!-- <input type="text" readonly="readonly" id="url_campaign" class="form-control w-100 bg-white" value="Easiest way to buy/sell 100s of NFTs and Artwork. Signup on theartwcoin.com to get $10 worth FREE ARTW as signup bonus and extra referral bonus of $5 worth FREE ARTW when you put in my referral code.   Direct Link -- https://theartwcoin.com/signup?code=<%=ref_code%>   Code - <%=ref_code%>">
+                  <!-- <input type="text" readonly="readonly" id="url_campaign" class="form-control w-100 bg-white" value="Easiest way to buy/sell 100s of NFTs and Artwork. Signup on ebtico.com to get $10 worth FREE ARTW as signup bonus and extra referral bonus of $5 worth FREE ARTW when you put in my referral code.   Direct Link -- https://ebtico.com/signup?code=<%=ref_code%>   Code - <%=ref_code%>">
                   <a onclick="myFunction3()" href="javascript:void(0);"><i class="fa fa-copy"></i></a> -->
                     <!-- <button class="btn btn-primary no-hover ml-1 btn-absolute" onclick="copyToClipboard('url_campaign')" >Copy Link</button> -->
               </div>
