--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -82,7 +82,7 @@
                             </div>
                           </div>
                           </div>
-                          <div class="row">
+                          <!-- <div class="row">
                             <div class="col-md-12">
                               <div class="form-group">
                                 <label>Select Country</label>
@@ -113,7 +113,7 @@
                               
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                           <div class="row">
                             <div class="col-md-6">
                               <div class="form-group">
