--- a/views/referral-table.ejs
+++ b/views/referral-table.ejs
@@ -117,11 +117,11 @@
                   </a>
                 </div> -->
                 <div class="col-md-3 col-6 mb-3">
-                  <a href="https://telegram.me/share/url?url=https://ebtico.com/signup?code=<%=ref_code%>&amp;text=Easiest way to buy/sell 100s of NFTs and Artwork. Signup on ebtico.com to get $10 worth FREE $EBT as signup bonus and extra referral bonus of $5 worth FREE $EBT when you put in my referral code.   Direct Link -- https://ebtico.com/signup?code=<%=ref_code%>   Code - <%=ref_code%>" target="_blank" class="social-share text-muted d-block text-center h6" title="Telegram">
+                  <a href="https://telegram.me/share/url?url=https://ebtico.com/signup?code=<%=ref_code%>&amp;text=Signup on ebtico.com to get $10 worth FREE $EBT as signup bonus and extra referral bonus of $5 worth FREE $EBT when you put in my referral code.   Direct Link -- https://ebtico.com/signup?code=<%=ref_code%>   Code - <%=ref_code%>" target="_blank" class="social-share text-muted d-block text-center h6" title="Telegram">
                     <i class="fab fa-telegram-plane btn-telegram"></i> <span class="btn-block mt-3">Telegram</span></a>
                   </div>
                 <div class="col-md-3 col-6 mb-3">
-                  <a href="mailto:?subject=ARTW Referral&amp;body=Easiest way to buy/sell 100s of NFTs and Artwork. Signup on ebtico.com to get $10 worth FREE $EBT as signup bonus and extra referral bonus of $5 worth FREE ARTW when you put in my referral code.<br><br>\n\n
+                  <a href="mailto:?subject=ARTW Referral&amp;body=Signup on ebtico.com to get $10 worth FREE $EBT as signup bonus and extra referral bonus of $5 worth FREE $EBT when you put in my referral code.<br><br>\n\n
                   Direct Link -- https://ebtico.com/signup?code=<%=ref_code%><br><br>\n\n
                   Code - <%=ref_code%>" class="social-share text-muted d-block text-center h6" title="Email">
                     <i class="far fa-envelope"></i> <span class="btn-block mt-3">Email</span>
