--- a/views/index.ejs
+++ b/views/index.ejs
@@ -438,7 +438,7 @@
                         </ul>
                     </div>
                     <div class="ps-top">
-                        <p>July Q3</p>
+                        <p>July-Sep 2021</p>
                     </div>
                     <span class="ps-sp-bot">
                         <img src="../assets/images/logo-white.png" class="img-fluid">
@@ -457,7 +457,7 @@
                         </ul>
                     </div>
                     <div class="ps-bot">
-                        <p>AUG Q3</p>
+                        <p>Oct-Dec 2021</p>
                     </div>
                     <span class="ps-sp-bot">
                         <img src="../assets/images/logo-white.png" class="img-fluid">
@@ -474,7 +474,7 @@
                         </ul>
                     </div>
                     <div class="ps-top">
-                        <p>SEPT Q3</p>
+                        <p>Jan-Mar 2022</p>
                     </div>
                     <span class="ps-sp-bot">
                         <img src="../assets/images/logo-white.png" class="img-fluid">
