--- a/views/referral-table.ejs
+++ b/views/referral-table.ejs
@@ -146,7 +146,7 @@
               <div class="text-right create-wallet-block">
         
                 <div class="input-group input-dash copy-id-dash m-0">
-                  <input style="max-width: 418px;" type="text" readonly="readonly" id="url_campaign" class="form-control w-100 bg-white" value="Easiest way to buy/sell 100s of NFTs and Artwork. Signup on ebtico.com to get $10 worth FREE ARTW as signup bonus and extra referral bonus of $5 worth FREE ARTW when you put in my referral code.   Direct Link -- https://ebtico.com/signup?code=<%=ref_code%>   Code - <%=ref_code%> ">
+                  <input style="max-width: 418px;" type="text" readonly="readonly" id="url_campaign" class="form-control w-100 bg-white" value="Signup on ebtico.com to get $10 worth FREE $EBT as signup bonus and extra referral bonus of $5 worth FREE $EBT when you put in my referral code.   Direct Link -- https://ebtico.com/signup?code=<%=ref_code%>   Code - <%=ref_code%> ">
                   <a onclick="myFunction3()" href="javascript:void(0);"><i class="fa fa-copy"></i></a>
                </div>
               </div>
