--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -25,9 +25,9 @@
                                 
                               </select>
                           </div>
-
-                      </div>
-                     
+                          
+                            </div>
+                    
                     </div>
                     <div class="row d-flex align-items-center" action="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/buy-ico.html">
                         <div class="col-lg-2 col-md-3 col-12">
@@ -114,9 +114,16 @@
                      <div class="form-group">
                       <div class="row">
                           <label class="control-label col-sm-5">Client Wallet Address<span style="color:red;">*</span></label>
-                      <div class="col-sm-7">
+                      <!-- <div class="col-sm-6">
                         <input type="text" class="form-control secure" value="0x0296b77A92Ee270b8a0b157Cc744E9f102af6C51" id="eth_wallet_address" name="eth_wallet_address" data-rule-required="true" data-msg-required="Please enter Ethereum Wallet Address." readonly="" >
-                      </div>
+                        
+                        <a onclick="myFunction()" href="javascript:void(0);"><i class="fa fa-copy"></i></a>
+                      </div> -->
+                      <div class="input-group col-sm-7 copy-id-dash">
+                        <input type="text" class="form-control secure" value="0x0296b77A92Ee270b8a0b157Cc744E9f102af6C51" id="eth_wallet_address" name="eth_wallet_address" data-rule-required="true" data-msg-required="Please enter Ethereum Wallet Address." readonly="" >
+                         <!-- <a onclick="myFunction()" href="javascript:void(0);"><i class="fa fa-copy"></i></a> -->
+                         
+                    </div>
                       </div>
                     </div>
                     <div class="form-group">
@@ -159,7 +166,7 @@
                           <label>
                             <input type="checkbox" value="">
                             <span class="cr"><i class="fa fa-check cr-icon"></i></span>
-                            I agree with <a href="">terms and conditions</a> of $EBT.
+                            I agree with terms and conditions of $EBT.
                           </label>
                         </div>
                       </div>
