--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -45,13 +45,13 @@
                               <div class="col-md-6">
                                 <div class="form-group text-left">
                                   <label>Full Name</label>
-                                   <input class="form-control" value="<%=result.name%>" name="name" type="text" placeholder="<%=result.name%>">
+                                   <input class="form-control" value="<%=result.name%>" name="name" type="text" placeholder="<%=result.name%>" readonly>
                                 </div>
                               </div>
                               <div class="col-md-6">
                                 <div class="form-group text-left">
                                   <label>Email ID</label>
-                                   <input class="form-control" type="email" name="email" value="<%=result.email%>" placeholder="<%=result.email%>">
+                                   <input class="form-control" type="email" name="email" value="<%=result.email%>" placeholder="<%=result.email%>" readonly>
                                 </div>
                               </div>
                              
